update error color

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 }
 
 .error{
-    color: rgb(245, 151, 151);
+    color: #c51244;
     text-align: center;
     line-height: 20px;
     padding-top: 8px;
