--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@
     font-size: 14px;
 }
 
+body{
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+}
+
 .title{
     text-transform: uppercase;
     color: #333;
@@ -189,8 +195,6 @@ label{
 
 .home-section{
     position: relative;
-    background-color: #f5f5f5;
-    min-height: calc(100vh);
     width: calc(100% - 250px);
     left: 250px;
 }
@@ -449,6 +453,18 @@ a.button{
     text-decoration: none;
 }
 
+.add-form-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.add-form-container p.error{
+    text-align: justify;
+    line-height: 20px;
+    padding: 0;
+    font-size: 12px;
+}
+
 /* Customize the label (the container) */
 .container {
     display: inline-block;
@@ -567,7 +583,6 @@ a.button{
   form.add-faculty .button{
     display: block;
     margin: 0 0 0 auto;
-    float: none;
   }
 
   .form-size{
