--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 *{
     font-family: 'Lato', sans-serif;
+    font-size: 16px;
 }
 
 .logo-name{
@@ -54,7 +55,7 @@
 
 .pricing-header {
     max-width: 700px;
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
 }
 
 .programs-section {
@@ -65,6 +66,10 @@
 .featurette-divider.sec-divider{
     margin: 2rem 0;
     height: 0;
+}
+
+.featurette-divider{
+    margin: 2rem 0;
 }
 
 .featurette-heading{
@@ -107,24 +112,105 @@ p.justify{
 }
 
 #featured-3{
-    margin-top: 20px;
+    margin-top: 2rem;
     padding-bottom: 0 !important;
 }
 
 .rounded-circle{
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
 }
 
 .faculty h3{
-    font-size: 20px !important;
+    font-size: 1.5rem !important;
 }
 
 .faculty h4{
-    font-size: 18px !important;
+    font-size: 1.3rem !important;
+}
+
+div.feature.col{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.bx{
+    font-size: 1.7rem;
+}
+
+.marketing .featurette-1{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+}
+
+.marketing .featurette-2{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+}
+
+.course-title{
+    text-align: center;
+    margin: 3rem 0 2rem 0;
+}
+
+.btn-apply-center{
+    text-align: center;
+}
+
+.carousel{
+    margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
+    }
+
+    .row-cols-lg-3>*{
+        flex: 0 0 auto;
+        width: 50%;
+    }
+
+    .faculty >*{
+        flex: 0 0 auto;
+        width: 50%;
+    }
+
+}
+
+@media (min-width: 992px) {
+    .course-cs{
+        padding-left: 20px;
+    }
+
+    .course-it{
+        padding-left: 20px;
+    }
+
+    .btn-apply-center{
+        text-align: left;
+    }
+
+    .row-cols-lg-3>*{
+        flex: 0 0 auto;
+        width: 33.3%;
+    }
+    
+    .marketing .featurette-1{
+        flex-direction: row-reverse;
+    }
+
+    .marketing .featurette-2{
+        flex-direction: row;
+    }
+
+    .faculty >*{
+        flex: 0 0 auto;
+        width: 33.3%;
     }
 }
