--- a/css/custom.css
+++ b/css/custom.css
@@ -166,6 +166,10 @@ div.feature.col{
     margin-bottom: 2rem;
 }
 
+.col-md-7{
+    width: 100%;
+}
+
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
@@ -184,6 +188,10 @@ div.feature.col{
 }
 
 @media (min-width: 992px) {
+    .col-md-7{
+        width: 58.33333333%;
+    }
+    
     .course-cs{
         padding-left: 20px;
     }
