--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,8 @@
 
 .logo-name{
     font-weight: 600;
+    padding-left: 5px;
+    padding-bottom: 2px;
 }
 
 .banner-1{
@@ -156,6 +158,7 @@ div.feature.col{
 .course-title{
     text-align: center;
     margin: 3rem 0 2rem 0;
+    font-size: 2.2rem;
 }
 
 .btn-apply-center{
@@ -168,6 +171,55 @@ div.feature.col{
 
 .col-md-7{
     width: 100%;
+}
+
+.photo{
+    border: 3.4px solid #0B390B;
+}
+
+.logo-photo{
+    background-image: url('../img/logo.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.logo-name{
+    font-size: 1.5rem;
+}
+
+.navbar-brand{
+    display: flex;
+    align-items: center;
+    margin-right: 0.75rem;
+}
+
+.course-cs {
+    padding-left: 0.75rem;
+}
+
+.course-it{
+    padding-right: 1rem;
+}
+
+#home-page{
+    padding-bottom: 0;
+}
+
+footer.container{
+    height: 150px;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+footer p, footer p a{
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: 0;
 }
 
 @media (min-width: 768px) {
@@ -188,17 +240,23 @@ div.feature.col{
 }
 
 @media (min-width: 992px) {
+    .course-title{
+        text-align: left;
+        margin: 0rem 0 2rem 0;
+    }
+
     .col-md-7{
         width: 58.33333333%;
     }
-    
+
     .course-cs{
-        padding-left: 20px;
+        padding-left: 2rem;;
     }
 
     .course-it{
-        padding-left: 20px;
+        padding-right: 2rem;;
     }
+    
 
     .btn-apply-center{
         text-align: left;
