--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-*{
+*, body{
     font-family: 'Lato', sans-serif;
     font-size: 16px;
 }
@@ -107,6 +107,7 @@ p.justify{
 .btn-login{
     border: 1px solid white;
     color: white;
+    border-radius: 15px;
 }
 
 #featured-3 .border-bottom{
@@ -222,6 +223,99 @@ footer p, footer p a{
     margin-bottom: 0;
 }
 
+#sign-up header nav{
+    background-color: white !important;
+    border-bottom: 1px solid lightgray;
+}
+
+#sign-up header nav i.bx, #sign-up header nav span.logo-name{
+    color: #107869;
+}
+
+main#home{
+    padding-top: 0;
+}
+
+main{
+    padding-top: 20px;
+}
+
+div.card{
+    border: 1px solid lightgray;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+div.sign-up{
+    max-width: 500px;
+}
+
+.fa-people-line, .fa-right-left{
+    font-size: 2rem;
+}
+
+div.card-hover{
+    border: 1px solid #107869;
+    background-color: #F2F7F2;
+}
+
+div.card:hover{
+    border: 1px solid #107869;
+    background-color: #F2F7F2;
+}
+
+p.continue{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.btn-continue{
+    width: 100%;
+    border-radius: 20px;
+}
+
+.btn-apply{
+    border-radius: 20px;
+}
+
+body#sign-up{
+}
+
+body#sign-up #container-parent{
+    height: calc(100vh);
+}
+
+@media (min-width: 576px) {
+    div.separator{
+        width: 2rem;
+    }
+    p.continue{
+        margin-top: 30px;
+    }
+    a.btn-continue{
+        max-width: 300px;
+    }
+    .card-container{
+        margin-top: 30px;
+        max-width: 550px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .btn-continue{
+        border-radius: 20px;
+    }
+
+    #sign-up header nav {
+        border-bottom: 0;
+    }
+
+    div.sign-up {
+        border: 1px solid lightgray;
+        border-radius: 20px;
+    }
+}
+
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
@@ -237,6 +331,9 @@ footer p, footer p a{
         width: 50%;
     }
 
+    div.sign-up{
+        max-width: 700px;
+    }
 }
 
 @media (min-width: 992px) {
