--- a/css/custom.css
+++ b/css/custom.css
@@ -233,11 +233,8 @@ footer p, footer p a{
 }
 
 main#home{
+    margin-top: 0;
     padding-top: 0;
-}
-
-main{
-    padding-top: 20px;
 }
 
 div.card{
@@ -246,8 +243,15 @@ div.card{
     cursor: pointer;
 }
 
+div.card.active {
+    -webkit-box-shadow: 0 0 40px #107869;
+       -moz-box-shadow: 0 0 40px #107869;
+            box-shadow: 0 0 40px #107869;
+}
+
 div.sign-up{
     max-width: 500px;
+    padding-top: 1.5rem;
 }
 
 .fa-people-line, .fa-right-left{
@@ -278,14 +282,51 @@ p.continue{
     border-radius: 20px;
 }
 
-body#sign-up{
-}
-
 body#sign-up #container-parent{
     height: calc(100vh);
 }
 
+p.continue-google .btn-continue{
+    max-width: 100%;
+    background-color: #3367D6 !important;
+}
+
+p.continue-google .fa-google{
+    font-size: 1.8rem;
+    float: left;
+}
+
+body#sign-up{
+    padding-top: 0;
+}
+
+form .btn-continue{
+    max-width: 100%;
+    background-color: #107869;
+}
+
+hr:not([size]) {
+    height: 0.5px;
+}
+
+span.or{
+    top: -20px;
+    position: relative;
+    background-color: white;
+}
+
+.btn-font{
+    font-size: 1.1rem;
+}
+
+.shortcut{
+    display: none;
+}
+
 @media (min-width: 576px) {
+    .shortcut{
+        display: block;
+    }
     div.separator{
         width: 2rem;
     }
@@ -296,7 +337,7 @@ body#sign-up #container-parent{
         max-width: 300px;
     }
     .card-container{
-        margin-top: 30px;
+        margin-top: 25px;
         max-width: 550px;
         margin-left: auto;
         margin-right: auto;
