--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,6 @@
-/* Googlefonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
-*{
-    font-family:'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 14px;
-}
-
 body{
     width: 100%;
     height: 100%;
-    background-color: #f5f5f5;
 }
 
 .title{
@@ -142,6 +130,7 @@ label{
 
 .side-bar .nav-links{
     height: calc(100vh);
+    padding-left: 0;
 }
 
 .side-bar .nav-links li{
