--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,118 @@
     padding-bottom: 2px;
 }
 
+.error{
+    color: #c51244;
+    text-align: center;
+    line-height: 20px;
+    padding-top: 8px;
+}
+
+.bx-user-circle{
+    font-size: 1.5rem;
+}
+
+.main-container{
+    margin-top: 72px;
+}
+
+.profile-progress {
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    background-color: #A9A9A9;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.bg-pending{
+    border: 4px solid #107869 !important;
+}
+
+.bg-white{
+    background-color: white !important;
+}
+
+.color-green{
+    color: #107869 !important;
+}
+
+a.back-button{
+    border: 1px solid #107869;
+    background-color: white;
+    color: #107869;
+}
+
+.profile-progress-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.profile-progress-container i.bx{
+    color: white;
+    font-size: 22px;
+}
+
+.profile-progress-container i.fa-solid{
+    color: white;
+    font-size: 16px;
+}
+
+.profile-progress-container.wrapper::before {
+    content: '';
+    position: relative;
+    top: 30px;
+    left: -50%;
+    border-top: .5rem solid #A9A9A9;
+    width: 100%;
+    z-index: -1;
+}
+
+.profile-progress-container.wrapper-green::before {
+    content: '';
+    position: relative;
+    top: 30px;
+    left: -50%;
+    border-top: .5rem solid #107869;
+    width: 100%;
+    z-index: -1;
+}
+
+.progress-bar-profile>*:first-child::before {
+    width: 0;
+}
+
+.next-button, .back-button{
+    max-width: 100px;
+}
+
+.back-button:hover, .back-button:focus{
+    background-color: #107869;
+}
+
+.next-button:hover, .next-button:focus{
+    opacity: 0.9;
+}
+
+.logout-link{
+    text-decoration: none;
+    color: white;
+}
+
+.logout-link:hover, .logout-link:focus{
+    text-decoration: none;
+    color: white;
+}
+
 .banner-1{
     background: linear-gradient(45deg,
     rgba(98, 156, 148, 0.75),
@@ -552,6 +664,10 @@ input.upload-photo{
 }
 
 @media (min-width: 768px) {
+    .next-button, .back-button{
+        max-width: 100px;
+    }
+
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
