add faculty and update settings

--- a/css/custom.css
+++ b/css/custom.css
@@ -264,7 +264,7 @@ p.justify{
 
 .background-color-green{
     background-color: #107869 !important;
-    border: #107869;
+    border-color: #107869;
 }
 
 .btn-login{
