Update applications part 3

--- a/css/custom.css
+++ b/css/custom.css
@@ -409,6 +409,10 @@ table#table-waiting tr td{
     vertical-align: middle;
 }
 
+table#table-withdrawn tr td{
+    vertical-align: middle;
+}
+
 .faculty h4{
     font-size: 1.3rem !important;
 }
